# pygenfsm

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  RELEASE.md  pyproject.toml  pyrightconfig.json
.github/workflows/: publish.yml
examples/: clone_example.py  context_injection.py  context_replacement.py  demo.py  light_example.py  mixed_handlers.py  network_connection.py  payment_processing.py
src/pygenfsm/: __init__.py  fsm.py
tests/: test_fsm.py  test_union_events.py
